# Estimation-du-Tarif-des-Concurrents-et-Analyse-de-la-D-rive

./: .gitignore  .pre-commit-config.yaml  PartieII.ipynb  README.md  common_function.py  makefile  pyproject.toml
.github/workflows/: main.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml  config.yml
docs/: api.md  index.md
github/workflows/: ci.yml
models/: Model.pkl
notebooks/: PartieI.ipynb  PartieII.ipynb
output/: results.csv
src/estimation_tarif/: __init__.py  exception.py  logger.py
src/estimation_tarif/apply_transformation/: __init__.py  add_features.py  utils.py
src/estimation_tarif/components/: data_ingestion.py
src/estimation_tarif/entity/: __init__.py  config_entity.py
tests/: test_sanity.py
