[tool.poetry]
name = "estimation_tarif"
version = "0.1.0"
description = "Estimation de tarifs et détection de dérive"
authors = ["KhachichiMehdi <khachichi.mehdi@aiac.ma>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "estimation_tarif", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = ">=2.1.0,<2.3.0"
numpy = ">=1.24.0,<2.0.0"
matplotlib = ">=3.7.0,<4.0.0"
seaborn = ">=0.12.0,<0.14.0"
xgboost = ">=1.7.0,<2.0.0"
lightgbm = ">=4.1.0,<5.0.0"
catboost = ">=1.2,<2.0.0"
shap = ">=0.41.0,<0.49.0"
optuna = ">=3.0.0,<4.0.0"
evidently = ">=0.3.0,<0.8.0"
scikit-learn = ">=1.2.0,<1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
